# TaskManager

./: CMakeLists.txt  CMakePresets.json  readme.md
database/: setup.sql
include/: Command.h  Database.h  Manager.h  Renderer.h  SqliteDatabase.h  Task.h  TaskRepository.h
src/: AddCommand.cpp  ArchiveCommand.cpp  Command.cpp  DeleteCommand.cpp  Manager.cpp  Renderer.cpp  SqliteDatabase.cpp  Task.cpp  TaskRepository.cpp  main.cpp
tests/: CMakeLists.txt  test_add_command.cpp  test_task.cpp  test_task_manager.cpp
